k8s/analytics-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: analytics-service
spec:
  replicas: 1
  selector:
    matchLabels:
      name: analytics-service

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        name: analytics-service
    spec:
      containers:
        - env:
            - name: MONGO_URI
              value: mongodb://mongodb:27017/analytics
          image: test-app-analytics-service:latest
          imagePullPolicy: IfNotPresent
          name: analytics-service
          ports:
            - containerPort: 3002

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          # readinessProbe:
          #   httpGet:
          #     path: /api/analytics/health
          #     port: 3002
          #   initialDelaySeconds: 15
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 3
      restartPolicy: Always
