k8s/auth-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      name: auth-service

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        name: auth-service
    spec:
      containers:
        - env:
            - name: JWT_SECRET
              value: exam-app-secret-key
            - name: MONGO_URI
              value: mongodb://mongodb:27017/exam-auth
          image: test-app-auth-service:latest
          imagePullPolicy: IfNotPresent
          name: auth-service
          ports:
            - containerPort: 3001

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          # readinessProbe:
          #   httpGet:
          #     path: /api/auth/health
          #     port: 3001
          #   initialDelaySeconds: 15
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 3

      restartPolicy: Always
