k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: frontend

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1

  template:
    metadata:
      labels:
        name: frontend
    spec:
      containers:
        - image: test-app-frontend:latest
          imagePullPolicy: IfNotPresent
          name: frontend
          ports:
            - containerPort: 4000

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "100m"
              memory: "128Mi"
          # readinessProbe:
          #   httpGet:
          #     path: /
          #     port: 4000
          #   initialDelaySeconds: 15
          #   periodSeconds: 10
          #   timeoutSeconds: 5
          #   failureThreshold: 3
      restartPolicy: Always
