k8s/analytics-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
spec:
  type: ClusterIP
  selector:
    name: analytics-service
  ports:
    - port: 3002
      targetPort: 3002
