k8s/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service
spec:
  type: ClusterIP
  ports:
    - port: 3001
      targetPort: 3001
  selector:
    name: auth-service
