k8s/storage-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: storage-service
spec:
  type: ClusterIP
  ports:
    - port: 3003
      targetPort: 3003
  selector:
    name: storage-service
