k8s/test-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: ClusterIP
  ports:
    - port: 3004
      targetPort: 3004
  selector:
    name: test-service
