k8s/microservice-exam-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-exam-app-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: myapp.local
      http:
        paths:
          - path: /api/auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 3001
          - path: /api/analytics
            pathType: Prefix
            backend:
              service:
                name: analytics-service
                port:
                  number: 3002
          - path: /api/storage
            pathType: Prefix
            backend:
              service:
                name: storage-service
                port:
                  number: 3003
          - path: /api/tests
            pathType: Prefix
            backend:
              service:
                name: test-service
                port:
                  number: 3004
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
